<resources>
    <string name="app_name">ZMSOpen</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_ok">OK</string>
    <string name="str_apply">Apply</string>
    <string name="time_out">Time out</string>
    <string name="str_delete">Delete</string>
    <string name="permission_title_rationale">Request for Permission</string>
    <string name="permission_read_storage_rationale">The current operation need to apply for reading SD card</string>
    <string name="permission_write_storage_rationale">The current operation need to apply for a SD card access rights</string>
    <string name="permission_read_write_storage_rationale">The current operation need to apply for reading and writing SD card authority</string>
    <string name="permission_camera_rationale">The current operation need to apply for a camera permission</string>
    <string name="tips_data_get_failed">Failed to get %1$s</string>
    <string name="tips_data_set_failed">Failed to set %1$s</string>
    <string name="register_name_digits"> ._0123456789 abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="tips_launcher">Guard your home Easily</string>
    <string name="tips_welcome_to_use">Welcome to use %1$s</string>
    <string name="str_device">Devices</string>
    <string name="str_record">Records</string>
    <string name="str_message">Messages</string>
    <string name="str_settings">Settings</string>
    <string name="synchronizing_data">Synchronizing data...</string>
    <string name="title_device">My Device</string>
    <string name="pppp_status_invalid_id">@string/invalid_id</string>
    <string name="pppp_status_initialing">Device connected, initializing</string>
    <string name="pppp_status_connect_not_allow">Connection is full</string>
    <string name="pppp_status_unknown">Unknown status</string>
    <string name="pppp_status_connecting">Connecting...</string>
    <string name="pppp_status_online">Online</string>
    <string name="pppp_status_disconnect">Offline</string>
    <string name="pppp_status_connect_failed">Connect failed</string>
    <string name="pppp_status_connect_timeout">Connect timed out</string>
    <string name="pppp_status_user_not_login">User is not logged in</string>
    <string name="pppp_status_err_user_pwd">Incorrect username or password</string>
    <string name="pppp_status_connect_user_login">The user has connected devices onto other mobile phone</string>
    <string name="pppp_status_err_pwd">Password error</string>
    <string name="pppp_status_sleep">Sleep</string>
    <string name="hint_user">Please enter your user name</string>
    <string name="hint_pwd">Please enter the password</string>
    <string name="hint_dev_connecting">Device is connecting, please wait...</string>
    <string name="Disconnected">Disconnected. Please check the network settings.</string>
    <string name="hint_dev_offline">Device is not online </string>
    <string name="tips_del_dev">Sure to delete the device?</string>
    <string name="tips_empty_photo">No photos yet</string>
    <string name="tips_empty_video">No videos yet</string>
    <string name="tips_empty_record">No records yet</string>
    <string name="str_photo">Photo</string>
    <string name="str_video">Video</string>
    <string name="record_detect">Motion detection alarm</string>
    <string name="record_dismantle">Dismantle alarm</string>
    <string name="record_433">%1$s alarm</string>
    <string name="record_call_ok">Answered calls</string>
    <string name="record_call_no">Missed calls </string>
    <string name="record_low_charge">Low charge </string>
    <string name="record_unlock_info">unlock</string>
    <string name="record_unlock_warn">lock warnning</string>
    <string name="record_battery">battery:</string>
    <string name="record_unlock_0">by user</string>
    <string name="record_unlock_1">by fingerprint</string>
    <string name="record_unlock_2">by password</string>
    <string name="record_unlock_3">by card</string>
    <string name="record_unlock_4">by key</string>
    <string name="record_unlock_5">by application user</string>
    <string name="record_unlock_warn_0">break unlock</string>
    <string name="record_unlock_warn_8">force unlock</string>
    <string name="ring_call">Call Ringtone</string>
    <string name="ring_alarm">Alarm Ringtone</string>
    <string name="str_vibrate">Vibrate</string>
    <string name="str_about">About</string>
    <string name="str_exit">Exit</string>
    <string name="default_ring">Default(%1$s)</string>
    <string name="default_ring_2">Default</string>
    <string name="silent_ring">Mute</string>
    <string name="exit_app">Exit the application?</string>
    <string name="version_check">Version Update</string>
    <string name="version_latest">Already the latest version</string>
    <string name="no_version_latest">Get the latest version</string>
    <string name="version_find">New version found</string>
    <string name="update">update</string>
    <string name="deleting">Deleting...</string>
    <string name="tips_delete_failed">Delete failed</string>
    <string name="select_all">Select All</string>
    <string name="delete_with_count">Delete(%1$d)</string>
    <string name="tips_delete">Sure to delete?</string>
    <string name="add_dev">Add Device</string>
    <string name="add_dev_failed">Failed to add device</string>
    <string name="str_scan">Scan QR Code</string>
    <string name="add_lan">Net search</string>
    <string name="tips_add_scan">Add device by scan QR code</string>
    <string name="choose_dev">Choose Device</string>
    <string name="connect_dev">Connect the device</string>
    <string name="wifi_set">WiFi Settings</string>
    <string name="next_step">Next</string>
    <string name="str_complete">Complete</string>
    <string name="doorbell">Doorbell</string>
    <string name="doorbell_text">Hold the ring button for 5 seconds.</string>
    <string name="network_camera">Network camera</string>
    <string name="network_camera_text">press the reset key of the device for 3~5 seconds until voice playback \"restore factory success\",
        wait for device prompt \"start successfully\".</string>
    <string name="tips_add_step_1"> Please put the device into the configuration WIFI mode.</string>
    <string name="tips_add_step_qr"> Please put the QR code against the camera,keep at 30-50 cm.when hearing \"wireless information is successful\", you can remove the mobile phone.When listen to \"wireless connection success\", click the next step to add device. </string>
    <string name="wifi_set_dev_dlg_msg"> WIFI needs to connect to the device AP that starts with \'AP_\'. do you want to connected?</string>
    <string name="tips_add_step_2">Only 2.4G WiFi is supported</string>
    <string name="tips_add_step_3">Make sure your phone and the device are connected to the same WiFi when pairing for the first time</string>
    <string name="connect_dev_wifi">Connect the device WiFi</string>
    <string name="tips_add_step_ap">The hotspot will connect your phone to the device, click next to continue</string>
    <string name="wifi_name">WiFi:</string>
    <string name="hint_wifi_pwd">Please enter the password</string>
    <string name="tips_pwd_lengh_not_enough">The length of password is at least 8 </string>
    <string name="wifi_set_dlg_title">WiFi Settings</string>
    <string name="wifi_set_dlg_msg">WiFi is not connected, do you want to set up WiFi immediately</string>
    <string name="wifi_set_dev_dlg_title">@string/connect_dev_wifi</string>
    <string name="gps_set_dlg_title">Location Settings</string>
    <string name="gps_set_dlg_msg">This Application needs to open the positioning function, do you want to set up immediately</string>
    <string name="tips_configuring">Configuring,please wait...</string>
    <string name="tips_result_ok">Congratulations! Add successfully</string>
    <string name="tips_wifi_not_connect">WiFi is not connected</string>
    <string name="tips_get_wifi_info">Getting WiFi information</string>
    <string name="tips_add_failed_1">No devices found. Please try again later</string>
    <string name="tips_reset_kj">Insert the network cable and try again</string>
    <string name="tips_reset_1">Pairing failed, please follow the figure below, press the reset button for 3 seconds,\n reset the device, keep the device powered on</string>
    <string name="tips_reset_2">Pairing failed, please follow the figure below,\n press the unlock button for 4 seconds, keep the device powered on</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_form_album">Select from the photo album</string>
    <string name="restore_to_default">Restore to default</string>
    <string name="sdcard">SD Card</string>
    <string name="storage_space">Storage space</string>
    <string name="sdcard_read_only">SD card read-only, please format first</string>
    <string name="format">Format</string>
    <string name="storage_used">Used: %1$s</string>
    <string name="storage_rest">Available: %1$s</string>
    <string name="help_push">1. When you application can\'t get notifications</string>
    <string name="help_permission">2. The function of mic\video\cameras can\'t available</string>
    <string name="help_push_desc">To ensure that the camera is prompted for normal use, follow the prompts below to enable self-startig  management.Need to add the application to the [Self-starting management] list, or kill the process or restart phone can\'t receive notifications.\n\nMIUI\nNotification bar settings: the application is displayed by default notice bar notification, —- if closed, then the notice will not be prompted\nNetwork Assistant: You can manually disable the installation of third-party programs to access 2G / 3G and WIFI networks and set up after the new installer whether to allow access to 2G / 3G and WIFI networks\nHuawei:\nBackground application protection: the need to manually add the application to this list, or Device into sleep will automatically kill the application process, only manually open the application to resume operation Notification management: There are three application states: prompt, allow, disable. Forbid the application, the notification bar will not have any reminder\nIn the [battery] option to remove the J [background clean] check\nFlyme:\nNotification bar push: Close the app notification to receive the message without any impressions\nPower management: safe center set the power saving mode, in the [standby power consumption management] allows the application standby, keep allowed, other wise the phone sleep or application idle for some time, can not receive the message0\nVIVO:\nMemory a key to clean up: the need to join the application [white list] list, otherwise the system comes with a key to speed up, will kill the process\nOPPO:\nFrozen application management: the need to add the application to the background, or lock screen state can not receive the message\nSamsung\nMemory a key to clean up: you need to join the application [white list] list,, otherwise the system will kill the application process when the system memory is optimized</string>
    <string name="help_permission_desc">APP needs to get access to the relevant permissions to work properly. Enter Setting->system\'s permission management-> select the application, open all permissions and add to the trust.</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_verification_code">verification</string>
    <string name="prompt_verification_code">Verification Code</string>
    <string name="action_register">register</string>
    <string name="prompt_confirm">Confirm</string>
    <string name="prompt_email_or_phonenum">Email or Phone number</string>
</resources>