<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dev_step"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/a1_step1_4" />

            <TextView
                style="@style/text_common"
                android:layout_marginTop="15dip"
                android:gravity="bottom|center_horizontal"
                android:text="@string/connect_dev"
                android:textSize="@dimen/text_17" />

            <TextView
                android:id="@+id/tv_tips"
                style="@style/text_common"
                android:layout_marginTop="10dip"
                android:gravity="bottom|center_horizontal"
                android:lineSpacingExtra="5dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:singleLine="false"
                android:text="@string/tips_add_step_1"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_16" />

            <TextView
                style="@style/text_common"
                android:layout_marginTop="15dip"
                android:gravity="bottom|center_horizontal"
                android:text="@string/doorbell"
                android:textSize="@dimen/text_17" />

            <TextView
                android:id="@+id/tv_tips2"
                style="@style/text_common"
                android:layout_marginTop="10dip"
                android:gravity="bottom|center_horizontal"
                android:lineSpacingExtra="5dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:singleLine="false"
                android:text="@string/doorbell_text"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_16" />

            <TextView
                style="@style/text_common"
                android:layout_marginTop="15dip"
                android:gravity="bottom|center_horizontal"
                android:text="@string/network_camera"
                android:textSize="@dimen/text_17" />

            <TextView
                android:id="@+id/tv_tips3"
                style="@style/text_common"
                android:layout_marginTop="10dip"
                android:gravity="bottom|center_horizontal"
                android:lineSpacingExtra="5dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:singleLine="false"
                android:text="@string/network_camera_text"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_16" />
        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/btn_bottom"
        android:text="@string/next_step" />


</LinearLayout>
