<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/action_bar"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/tv_title"
                style="@style/text_title"
                android:text="@string/sdcard" />

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_gravity="bottom"
            android:background="@color/divider" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/ly_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_window"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dip">


            <TextView
                style="@style/text_common"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="20dip"
                android:gravity="center"
                android:text="@string/storage_space"
                android:textSize="@dimen/text_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_use"
                    style="@style/text_common"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@color/colorAccent"
                    android:gravity="left|center_vertical"
                    android:minHeight="35dip"
                    android:paddingBottom="10dip"
                    android:paddingLeft="8dip"
                    android:paddingRight="8dip"
                    android:paddingTop="10dip"
                    android:text="@string/storage_used"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/tv_rest"
                    style="@style/text_common"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="#768B8E"
                    android:gravity="right|center_vertical"
                    android:minHeight="35dip"
                    android:paddingBottom="10dip"
                    android:paddingLeft="8dip"
                    android:paddingRight="8dip"
                    android:paddingTop="10dip"
                    android:text="@string/storage_rest"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_tips"
                style="@style/text_common"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/sdcard_read_only"
                android:textColor="@color/red"
                android:textSize="@dimen/text_14"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0" />

        <Button
            android:id="@+id/btn_format"
            style="@style/btn_com"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/format" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>



