<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/common_toolbar" />

    <com.nicky.framework.slidinglayout.SlidingLayout
        android:id="@+id/ly_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_window"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:sliding_mode="both">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/text_common"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/help_push"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:id="@+id/tv_help_push"
                    style="@style/text_common"
                    android:background="@color/white"
                    android:lineSpacingExtra="3.5dp"
                    android:lineSpacingMultiplier="1.6"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/help_push_desc" />

                <TextView
                    style="@style/text_common"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dip"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/help_permission"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:id="@+id/tv_help_permission"
                    style="@style/text_common"
                    android:layout_marginBottom="20dip"
                    android:background="@color/white"
                    android:lineSpacingExtra="3.5dp"
                    android:lineSpacingMultiplier="1.6"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/help_permission_desc" />
                <!--             <com.nicky.framework.tableview.UITableView
                                 android:id="@+id/table_01"
                                 android:layout_marginTop="@dimen/common_size_15"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />-->

                <!--<TextView
                    android:id="@+id/tv_help"
                    style="@style/text_common"
                    android:text="@string/add_help_content"
                    android:layout_marginTop="20dip"
                    android:layout_marginBottom="20dip"
                    android:lineSpacingExtra="3.5dp"
                    android:lineSpacingMultiplier="1.6"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    />-->

            </LinearLayout>
        </ScrollView>
    </com.nicky.framework.slidinglayout.SlidingLayout>

</android.support.design.widget.CoordinatorLayout>



